# bank_api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cmd/server/: main.py
deployment/docker/: Dockerfile  docker-compose.yml
deployment/migration/: DockerfileMigrate
docs/: database.dbml
internal/presentation/restful/: routes.py
pkg/config/: __init__.py  config.py
pkg/database/postgres/: __init__.py  connect_service.py
pkg/logger/: __init__.py
pkg/security/: __init__.py  security.py
pkg/shutdown/: __init__.py
scripts/: create_project_structure.sh  dir_to_test.sh  dir_to_text.sh  generate_feature.sh  generate_migrate.sh  postgres.sh
tests/: conftest.py
tests/unit/pkg/security/: test_security.py
tools/: dir_to_text.py  generate_secret_key.py
