[tool.poetry]
name = "bank_service"
version = "0.1.0"
description = "A bank service project using FastAPI, PostgreSQL, and Redis"
authors = ["cyan92128505 <cyan92128505@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"
asyncpg = "^0.24.0"
psycopg2-binary = "^2.9.1"
redis = "^3.5.3"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
httpx = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
